// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> Snapshots should match the snapshot 1`] = `
.shadow-1 {
  box-shadow: 0 2px 1px -1px var(--qtm-shadow-umbra-color),0 1px 1px 0 var(--qtm-shadow-penumbra-color),0 1px 3px 0 var(--qtm-shadow-ambient-color);
}

.Card-module__card-wrapper___HvjEg {
  background-color: var(--qtm-colors-neutral-0);
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: relative;
}

.Content-module__content___itVo9 {
  font-size: calc(var(--qtm-base-font-size)*.875);
  margin: 0;
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Footer-module__footer-wrapper___fgaA4 {
  padding: 0 var(--qtm-spacing-medium) var(--qtm-spacing-medium);
}

.Header-module__header-wrapper___G5kEL {
  display: flex;
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.HeaderText-module__header-text___TE5FD {
  flex-basis: 0;
  flex-grow: 1;
}

.Title-module__title___3S2cv {
  font-size: calc(var(--qtm-base-font-size)*1.5);
  font-weight: 600;
  margin: 0;
}

.c9 {
  pointer-events: none;
  width: 24px;
}

.c9.with-children {
  margin-right: 8px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: undefinedpx;
  line-height: NaNpx;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c5:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c5:focus,
.c5:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c5:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c6 .c8 {
  margin-right: 0;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c4 {
  font-size: 16px;
  max-height: 70vh;
  overflow-y: auto;
  padding: 16px;
}

.c2 {
  padding: 16px 16px 0;
}

.c3 {
  font-weight: 700;
  line-height: 1.25;
}

.c1 header {
  padding-right: 64px;
}

.c7 {
  position: absolute;
  top: 12px;
  right: 16px;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 98;
  background-color: rgba(66,66,66,0.5);
}

@media (min-width:0px) {
  .c1 {
    width: 90%;
  }
}

@media (min-width:600px) {
  .c1 {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .c1 {
    width: 800px;
  }
}

<div
  class="c0"
  role="dialog"
>
  <article
    class="Card-module__card-wrapper___HvjEg shadow-1 c1"
    tabindex="0"
  >
    <header
      class="Header-module__header-wrapper___G5kEL c2"
    >
      <div
        class="HeaderText-module__header-text___TE5FD"
      >
        <h2
          class="Title-module__title___3S2cv c3"
        >
          Modal title
        </h2>
      </div>
    </header>
    <div
      class="Content-module__content___itVo9 c4"
    >
      Modal Content
    </div>
    <footer
      class="Footer-module__footer-wrapper___fgaA4"
    >
      ModalFooter
    </footer>
    <button
      aria-label="close dialog"
      class="c5 c6 c7"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c8 c9 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </article>
</div>
`;

exports[`<Modal /> Snapshots should match the snapshot 2`] = `
.shadow-1 {
  box-shadow: 0 2px 1px -1px var(--qtm-shadow-umbra-color),0 1px 1px 0 var(--qtm-shadow-penumbra-color),0 1px 3px 0 var(--qtm-shadow-ambient-color);
}

.Card-module__card-wrapper___HvjEg {
  background-color: var(--qtm-colors-neutral-0);
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: relative;
}

.Content-module__content___itVo9 {
  font-size: calc(var(--qtm-base-font-size)*.875);
  margin: 0;
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Footer-module__footer-wrapper___fgaA4 {
  padding: 0 var(--qtm-spacing-medium) var(--qtm-spacing-medium);
}

.Header-module__header-wrapper___G5kEL {
  display: flex;
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.HeaderText-module__header-text___TE5FD {
  flex-basis: 0;
  flex-grow: 1;
}

.Title-module__title___3S2cv {
  font-size: calc(var(--qtm-base-font-size)*1.5);
  font-weight: 600;
  margin: 0;
}

.c8 {
  pointer-events: none;
  width: 24px;
}

.c8.with-children {
  margin-right: 8px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: undefinedpx;
  line-height: NaNpx;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c4:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c4:focus,
.c4:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c4:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c5 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c5 .c7 {
  margin-right: 0;
}

.c5:hover,
.c5:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c5:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c3 {
  font-size: 16px;
  max-height: 70vh;
  overflow-y: auto;
  padding: 16px;
}

.c1 {
  padding: 16px 16px 0;
}

.c2 {
  font-weight: 700;
  line-height: 1.25;
}

.c0 header {
  padding-right: 64px;
}

.c6 {
  position: absolute;
  top: 12px;
  right: 16px;
}

@media (min-width:0px) {
  .c0 {
    width: 90%;
  }
}

@media (min-width:600px) {
  .c0 {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .c0 {
    width: 800px;
  }
}

<article
  class="Card-module__card-wrapper___HvjEg shadow-1 c0"
  tabindex="0"
>
  <header
    class="Header-module__header-wrapper___G5kEL c1"
  >
    <div
      class="HeaderText-module__header-text___TE5FD"
    >
      <h2
        class="Title-module__title___3S2cv c2"
      >
        Modal title
      </h2>
    </div>
  </header>
  <div
    class="Content-module__content___itVo9 c3"
  >
    Modal Content
  </div>
  <footer
    class="Footer-module__footer-wrapper___fgaA4"
  >
    ModalFooter
  </footer>
  <button
    aria-label="close dialog"
    class="c4 c5 c6"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c7 c8 css-1696fkf-MuiSvgIcon-root"
      data-qtm-preloader="icon"
      data-testid="CloseIcon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
</article>
`;
